inclusao de dados da coluna a esquerda

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="pt-BR">
 
   <head>
-    <title>Venilton FalvoJr</title>
+    <title>Ricardo Acruche</title>
     
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,13 +33,13 @@
           <div class="w3-white w3-text-grey w3-card-4">
             <!-- @falvojr: This container has been modified to not use a profile picture. -->
             <div class="w3-container">
-              <h2>Venilton FalvoJr</h2>
+              <h2>Ricardo Acruche</h2>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-indigo"></i>Líder Técnico na DIO</p>
-              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-indigo"></i>Araraquara-SP, Brasil</p>
-              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-indigo"></i>falvojr@gmail.com</p>
-              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-indigo"></i>(16) 99721-8281</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-indigo"></i>Estudante</p>
+              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-indigo"></i>Rio das Ostras-RJ, Brasil</p>
+              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-indigo"></i>richardbusiness29@aol.com</p>
+              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-indigo"></i>(21) 99721-8281</p>
               <hr>
   
               <p class="w3-large">
@@ -72,11 +72,11 @@
               </div>
               <p>Inglês</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:60%"></div>
+                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:80%"></div>
               </div>
               <p>Espanhol</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:25%"></div>
+                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:15%"></div>
               </div>
               <br>
             </div>
